<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">


    <TextView
            android:text="@string/txtNomPaciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/txt_Paciente"
            android:layout_marginTop="28dp" android:textStyle="bold|italic" android:textAlignment="center"
            android:textSize="18sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nuevo_Paciente" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/txtApePaciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_nuevo_Paciente" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:textStyle="bold|italic" android:textAlignment="center" android:textSize="18sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_ingreso_apellido" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/txtci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_ingreso_apellido" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:textStyle="bold|italic" android:textAlignment="center" android:textSize="18sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_ingreso_ci" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:hint="0"/>
    <TextView
            android:text="@string/txt_Paciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_Paciente"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/imageView3"
            android:textStyle="bold" android:textAllCaps="true" android:textAlignment="center" android:textSize="24sp"/>
    <ImageView
            android:layout_width="154dp"
            android:layout_height="128dp" app:srcCompat="@drawable/nuevo"
            android:id="@+id/imageView3" android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.497" android:foregroundGravity="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>