<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="wrap_content"
                                                   android:layout_height="wrap_content">
    <EditText

            android:layout_width="388dp"
            android:layout_height="44dp"
            android:id="@+id/txt_ingresarMedicina"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombreMedicina"/>
    <TextView
            android:text="@string/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_nombreMedicina"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.026" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="36dp" android:textStyle="bold|italic" android:textAlignment="center"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/txtDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_tipoMedicina" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_ingresarMedicina" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.021" android:textStyle="bold|italic" android:textSize="18sp"/>
    <EditText
            android:layout_width="392dp"
            android:layout_height="46dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_ingresar_tipoMedicina" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_tipoMedicina"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/txtPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_precioMedicina" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_ingresar_tipoMedicina" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.022" android:textStyle="bold|italic" android:textSize="18sp"/>
    <EditText
            android:layout_width="388dp"
            android:layout_height="39dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_ingPrecioMedicina" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_precioMedicina" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:hint="0.0"/>
    <TextView
            android:text="MEDICAMENTO"
            android:layout_width="210dp"
            android:layout_height="31dp"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:gravity="center" app:layout_constraintTop_toBottomOf="@+id/imageView4"
            android:layout_marginTop="24dp" android:textStyle="bold" android:textAllCaps="true"
            android:textAlignment="center" android:textSize="24sp" app:layout_constraintHorizontal_bias="0.518"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/medication"
            android:id="@+id/imageView4" android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498"/>

</androidx.constraintlayout.widget.ConstraintLayout>
