<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground2"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="373dp"
            android:layout_height="679dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp" app:layout_constraintStart_toStartOf="parent"
            android:background="#FDFCFC"

            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.49">

        <ImageView
                android:layout_width="258dp"
                android:layout_height="63dp" app:srcCompat="@drawable/farmazul"
                android:id="@+id/imageView" android:layout_marginTop="28dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.454"/>

        <EditText
                android:layout_width="273dp"
                android:layout_height="48dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/buscarMedicamento"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/borde_busqueda"
                android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
                android:editable="true" android:hint="Medicamento"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/loupe"

                android:background="#FDFCFC"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/buscarMedicamento" android:layout_marginStart="8dp"
                android:layout_marginTop="60dp" app:layout_constraintHorizontal_bias="0.29"
                android:id="@+id/btn_buscarMedicina"/>
        <TextView
                android:text="@string/txtNombre"
                android:layout_width="101dp"
                android:layout_height="19dp"
                android:id="@+id/txt_nombreMedicina" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/buscarMedicamento"
                android:layout_marginStart="16dp" app:layout_constraintBottom_toTopOf="@+id/rv_medicinas"
                app:layout_constraintVertical_bias="0.0" android:layout_marginBottom="10dp"
                android:textStyle="bold|italic" android:textAllCaps="false" android:textAlignment="center"/>
        <TextView
                android:text="@string/txtPrecio"
                android:layout_width="76dp"
                android:layout_height="17dp"
                android:id="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/buscarMedicamento"
                app:layout_constraintBottom_toBottomOf="@+id/Descripcion"
                app:layout_constraintVertical_bias="0.8" app:layout_constraintStart_toEndOf="@+id/Descripcion"
                android:layout_marginStart="30dp" app:layout_constraintHorizontal_bias="0.317"
                android:layout_marginBottom="2dp" android:textStyle="bold|italic" android:textAlignment="center"/>
        <TextView
                android:text="@string/txtDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/Descripcion"
                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/buscarMedicamento"
                app:layout_constraintStart_toEndOf="@+id/txt_nombreMedicina" android:layout_marginStart="30dp"
                android:textStyle="bold|italic" android:textAlignment="center"/>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="339dp"
                android:layout_height="396dp"
                android:id="@+id/rv_medicinas" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/Descripcion" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.47" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.096"/>
        <Button
                android:layout_width="32dp"
                android:layout_height="27dp"
                android:id="@+id/btn_anadirMedicamento"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="544dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/medication"
                android:textColor="@color/colorBlanco"
                app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.785"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>