<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground2"
        tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="378dp"
            android:layout_height="674dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp" app:layout_constraintStart_toStartOf="parent"
            android:background="#FDFCFC"

            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.49">

        <ImageView
                android:layout_width="268dp"
                android:layout_height="50dp" app:srcCompat="@drawable/farmazul"
                android:id="@+id/imageView" android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>

        <EditText
                android:layout_width="273dp"
                android:layout_height="48dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/borde_busqueda"
                android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
                android:id="@+id/inputc_busqueda" android:hint="Nombre Paciente"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/search"
                android:background="@color/colorBackground2"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                android:layout_marginTop="20dp" app:layout_constraintStart_toEndOf="@+id/inputc_busqueda"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/txtApePaciente" app:layout_constraintHorizontal_bias="0.415"
                app:layout_constraintVertical_bias="0.112" android:id="@+id/btn_BuscarPaciente"/>

        <Button
                android:layout_width="50dp"
                android:layout_height="45dp"

                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="600dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/nuevo"
                android:textColor="@color/colorBlanco"
                android:id="@+id/btn_nuevoPaciente"/>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="352dp"
                android:layout_height="363dp"
                app:layout_constraintTop_toBottomOf="@+id/inputc_busqueda" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/rv_pacientes"
                android:layout_marginTop="128dp"
        />
        <TextView
                android:text="@string/txtNomPaciente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtNomPaciente"
                app:layout_constraintTop_toBottomOf="@+id/inputc_busqueda" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintBottom_toTopOf="@+id/rv_pacientes"
                app:layout_constraintVertical_bias="0.752" android:textStyle="bold|italic"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/txtApePaciente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtApePaciente" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/inputc_busqueda"
                app:layout_constraintStart_toEndOf="@+id/txtNomPaciente"
                android:layout_marginStart="28dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/rv_pacientes"
                app:layout_constraintVertical_bias="0.795" android:textStyle="bold|italic"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/txtci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtci" app:layout_constraintStart_toEndOf="@+id/txtApePaciente"
                android:layout_marginStart="30dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.056"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/inputc_busqueda"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/rv_pacientes"
                app:layout_constraintVertical_bias="0.795" android:textStyle="bold|italic"
                android:textAlignment="center"/>
        <TextView
                android:text="PACIENTES"
                android:layout_width="159dp"
                android:layout_height="32dp"
                android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/inputc_busqueda"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txtApePaciente"
                app:layout_constraintHorizontal_bias="0.374" app:layout_constraintVertical_bias="0.6"
                android:gravity="center" android:textStyle="bold|italic" android:textAllCaps="true"
                android:textAlignment="center" android:textSize="24sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>